--- a/app/html/package.json
+++ b/app/html/package.json
@@ -41,11 +41,13 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.12.7",
     "@storybook/addons": "6.2.0-alpha.10",
     "@storybook/client-api": "6.2.0-alpha.10",
     "@storybook/core": "6.2.0-alpha.10",
     "@types/webpack-env": "^1.15.3",
     "core-js": "^3.0.1",
+    "dom-chef": "^4.2.2",
     "global": "^4.3.2",
     "html-loader": "^1.0.0",
     "react": "16.13.1",
