--- a/app/svelte/tsconfig.json
+++ b/app/svelte/tsconfig.json
@@ -5,10 +5,6 @@
     "types": ["webpack-env"],
     "resolveJsonModule": true
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "src/**/*.test.*"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["src/**/*.test.*"]
 }
