--- a/addons/actions/package.json
+++ b/addons/actions/package.json
@@ -35,7 +35,7 @@
     "@storybook/core-events": "6.1.0-alpha.7",
     "@storybook/theming": "6.1.0-alpha.7",
     "core-js": "^3.0.1",
-    "fast-deep-equal": "^3.1.1",
+    "dequal": "^2.0.2",
     "global": "^4.3.2",
     "lodash": "^4.17.15",
     "polished": "^3.4.4",
