--- a/addons/docs/package.json
+++ b/addons/docs/package.json
@@ -65,7 +65,7 @@
     "core-js": "^3.0.1",
     "doctrine": "^3.0.0",
     "escodegen": "^1.12.0",
-    "fast-deep-equal": "^3.1.1",
+    "dequal": "^2.0.2",
     "global": "^4.3.2",
     "html-tags": "^3.1.0",
     "js-string-escape": "^1.0.1",
