--- a/lib/api/package.json
+++ b/lib/api/package.json
@@ -38,7 +38,7 @@
     "@storybook/theming": "6.1.0-alpha.7",
     "@types/reach__router": "^1.3.5",
     "core-js": "^3.0.1",
-    "fast-deep-equal": "^3.1.1",
+    "dequal": "^2.0.2",
     "global": "^4.3.2",
     "lodash": "^4.17.15",
     "memoizerific": "^1.11.3",
