--- a/lib/components/package.json
+++ b/lib/components/package.json
@@ -36,7 +36,7 @@
     "@types/react-color": "^3.0.1",
     "@types/react-syntax-highlighter": "11.0.4",
     "core-js": "^3.0.1",
-    "fast-deep-equal": "^3.1.1",
+    "dequal": "^2.0.2",
     "global": "^4.3.2",
     "lodash": "^4.17.15",
     "markdown-to-jsx": "^6.11.4",
