--- a/addons/storyshots/storyshots-parallel/package.json
+++ b/addons/storyshots/storyshots-parallel/package.json
@@ -3,7 +3,8 @@
   "version": "6.1.0-alpha.9",
   "private": true,
   "scripts": {
-    "example": "STORYBOOK_URL=http://localhost:8001/html-kitchen-sink CONCURRENCY=5 jest --forceExit --env '<rootDir>/src/jest-env.js' src/example.test.js"
+    "example": "STORYBOOK_URL=http://localhost:8001/html-kitchen-sink CONCURRENCY=5 jest --forceExit --env '<rootDir>/dist/jest-env.js' example.test",
+    "prepare": "node ../../../scripts/prepare.js"
   },
   "dependencies": {
     "playwright": "^1.3.0",
