--- a/addons/docs/package.json
+++ b/addons/docs/package.json
@@ -67,6 +67,7 @@
     "doctrine": "^3.0.0",
     "escodegen": "^1.12.0",
     "fast-deep-equal": "^3.1.1",
+    "glob": "^7.1.3",
     "global": "^4.3.2",
     "html-tags": "^3.1.0",
     "js-string-escape": "^1.0.1",
