--- a/app/react/package.json
+++ b/app/react/package.json
@@ -42,7 +42,6 @@
     "@storybook/node-logger": "6.1.0-alpha.14",
     "@storybook/semver": "^7.3.2",
     "@svgr/webpack": "^5.4.0",
-    "@types/webpack-env": "^1.15.2",
     "babel-plugin-add-react-displayname": "^0.0.5",
     "babel-plugin-named-asset-import": "^0.3.1",
     "babel-plugin-react-docgen": "^4.1.0",
@@ -62,7 +61,8 @@
   "devDependencies": {
     "@storybook/client-api": "6.1.0-alpha.14",
     "@types/node": "^14.0.10",
-    "@types/webpack": "^4.41.12"
+    "@types/webpack": "^4.41.12",
+    "@types/webpack-env": "^1.15.2"
   },
   "peerDependencies": {
     "@babel/core": "^7.11.5"
