--- a/addons/knobs/package.json
+++ b/addons/knobs/package.json
@@ -47,6 +47,7 @@
     "react": "^16.8.3",
     "react-color": "^2.17.0",
     "react-dom": "^16.8.3",
+    "react-json-view": "^1.19.1",
     "react-lifecycles-compat": "^3.0.4",
     "react-select": "^3.0.8",
     "regenerator-runtime": "^0.13.3"
