--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,12 +21,9 @@ jobs:
       class: large
       name: sb_node
     steps:
-      - add_ssh_keys:
-          fingerprints:
-            - 35:aa:b9:c3:b8:1c:27:1f:02:0a:73:1a:ac:58:77:df
       - run:
           name: Clone GitHub repository
-          command: echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config && git clone -b ${CIRCLE_BRANCH} --single-branch --depth=1 git@github.com:storybookjs/storybook.git /tmp/storybook
+          command: git clone -b ${CIRCLE_BRANCH} --single-branch --depth=1 git@github.com:storybookjs/storybook.git /tmp/storybook
       - run:
           name: Remove examples
           command: rm -rf examples/
