--- a/addons/storyshots/storyshots-core/package.json
+++ b/addons/storyshots/storyshots-core/package.json
@@ -66,7 +66,9 @@
     "@storybook/vue": "*",
     "jest-preset-angular": "*",
     "jest-vue-preprocessor": "*",
-    "vue": "*"
+    "vue": "*",
+    "react": "*",
+    "react-test-renderer": "*"
   },
   "peerDependenciesMeta": {
     "jest-preset-angular": {
@@ -79,6 +81,12 @@
       "optional": true
     },
     "vue": {
+      "optional": true
+    },
+    "react": {
+      "optional": true
+    },
+    "react-test-renderer": {
       "optional": true
     }
   },
