--- a/addons/actions/package.json
+++ b/addons/actions/package.json
@@ -49,7 +49,9 @@
   "devDependencies": {
     "@types/lodash": "^4.14.150",
     "@types/uuid": "^7.0.3",
-    "@types/webpack-env": "^1.15.2"
+    "@types/webpack-env": "^1.15.2",
+    "react": "^16.8.3 || ^17.0.0",
+    "react-dom": "^16.8.3 || ^17.0.0"
   },
   "peerDependencies": {
     "react": "^16.8.3 || ^17.0.0",
