--- a/addons/backgrounds/package.json
+++ b/addons/backgrounds/package.json
@@ -43,7 +43,9 @@
     "regenerator-runtime": "^0.13.3"
   },
   "devDependencies": {
-    "@types/webpack-env": "^1.15.2"
+    "@types/webpack-env": "^1.15.2",
+    "react": "^16.8.3 || ^17.0.0",
+    "react-dom": "^16.8.3 || ^17.0.0"
   },
   "peerDependencies": {
     "react": "^16.8.3 || ^17.0.0",
