--- a/lib/api/package.json
+++ b/lib/api/package.json
@@ -52,7 +52,9 @@
     "@types/lodash": "^4.14.150",
     "@types/semver": "^7.1.0",
     "flush-promises": "^1.0.2",
-    "qs": "^6.6.0"
+    "qs": "^6.6.0",
+    "react": "^16.8.3 || ^17.0.0",
+    "react-dom": "^16.8.3 || ^17.0.0"
   },
   "peerDependencies": {
     "react": "^16.8.3 || ^17.0.0",
