--- a/lib/components/package.json
+++ b/lib/components/package.json
@@ -53,7 +53,9 @@
     "css": "^2.2.4",
     "enzyme": "^3.9.0",
     "jest": "^26.0.0",
-    "jest-enzyme": "^7.0.2"
+    "jest-enzyme": "^7.0.2",
+    "react": "^16.8.3 || ^17.0.0",
+    "react-dom": "^16.8.3 || ^17.0.0"
   },
   "peerDependencies": {
     "react": "^16.8.3 || ^17.0.0",
