--- a/lib/ui/package.json
+++ b/lib/ui/package.json
@@ -68,6 +68,8 @@
     "chromatic": "^5.0.0",
     "enzyme": "^3.11.0",
     "flush-promises": "^1.0.2",
+    "react": "^16.8.3 || ^17.0.0",
+    "react-dom": "^16.8.3 || ^17.0.0",
     "terser-webpack-plugin": "^3.0.0",
     "webpack": "^4.33.0"
   },
