--- a/app/marko/package.json
+++ b/app/marko/package.json
@@ -38,14 +38,14 @@
     "@storybook/core": "6.0.28-alpha.3",
     "core-js": "^3.0.1",
     "global": "^4.3.2",
+    "react": "^16.8.3 || ^17.0.0",
+    "react-dom": "^16.13.1 || ^17.0.0",
     "regenerator-runtime": "^0.13.3",
     "ts-dedent": "^1.1.1"
   },
   "peerDependencies": {
     "@babel/core": "*",
     "marko": "^4.15.2",
-    "react": "*",
-    "react-dom": "*",
     "webpack": "^4"
   },
   "engines": {
