--- a/addons/a11y/package.json
+++ b/addons/a11y/package.json
@@ -53,8 +53,8 @@
   "devDependencies": {
     "@testing-library/react": "^10.0.4",
     "@types/webpack-env": "^1.15.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": "^16.8.3 || ^17.0.0",
+    "react-dom": "^16.8.3 || ^17.0.0"
   },
   "peerDependencies": {
     "react": "*",
