--- a/app/aurelia/package.json
+++ b/app/aurelia/package.json
@@ -32,6 +32,8 @@
     "@storybook/node-logger": "6.0.28-alpha.3",
     "fork-ts-checker-webpack-plugin": "^4.0.3",
     "global": "^4.3.2",
+    "react": "^16.8.3 || ^17.0.0",
+    "react-dom": "^16.13.1 || ^17.0.0",
     "ts-loader": "^6.0.1",
     "webpack": "^4.33.0"
   },
