--- a/app/ember/package.json
+++ b/app/ember/package.json
@@ -35,6 +35,8 @@
     "@storybook/core": "6.0.28-alpha.3",
     "core-js": "^3.0.1",
     "global": "^4.3.2",
+    "react": "^16.8.3 || ^17.0.0",
+    "react-dom": "^16.13.1 || ^17.0.0",
     "regenerator-runtime": "^0.13.3",
     "ts-dedent": "^1.1.1"
   },
@@ -42,9 +44,7 @@
     "@babel/core": "*",
     "babel-plugin-ember-modules-api-polyfill": "^2.12.0",
     "babel-plugin-htmlbars-inline-precompile": "2 || 3",
-    "ember-source": "^3.16.0",
-    "react": "*",
-    "react-dom": "*"
+    "ember-source": "^3.16.0"
   },
   "engines": {
     "node": ">=8.0.0"
