--- a/app/mithril/package.json
+++ b/app/mithril/package.json
@@ -42,6 +42,8 @@
     "@types/webpack-env": "^1.15.2",
     "core-js": "^3.0.1",
     "global": "^4.3.2",
+    "react": "^16.8.3 || ^17.0.0",
+    "react-dom": "^16.13.1 || ^17.0.0",
     "regenerator-runtime": "^0.13.3",
     "ts-dedent": "^1.1.1"
   },
@@ -50,9 +52,7 @@
   },
   "peerDependencies": {
     "@babel/core": "*",
-    "mithril": "^1.1.6 || ^2.0.0",
-    "react": "*",
-    "react-dom": "*"
+    "mithril": "^1.1.6 || ^2.0.0"
   },
   "engines": {
     "node": ">=8.0.0"
