--- a/app/preact/package.json
+++ b/app/preact/package.json
@@ -40,6 +40,8 @@
     "@types/webpack-env": "^1.15.2",
     "core-js": "^3.0.1",
     "global": "^4.3.2",
+    "react": "^16.8.3 || ^17.0.0",
+    "react-dom": "^16.13.1 || ^17.0.0",
     "regenerator-runtime": "^0.13.3",
     "ts-dedent": "^1.1.1"
   },
@@ -48,9 +50,7 @@
   },
   "peerDependencies": {
     "@babel/core": "*",
-    "preact": "^8.0.0|^10.0.0",
-    "react": "*",
-    "react-dom": "*"
+    "preact": "^8.0.0|^10.0.0"
   },
   "engines": {
     "node": ">=8.0.0"
