--- a/app/rax/package.json
+++ b/app/rax/package.json
@@ -39,6 +39,8 @@
     "core-js": "^3.0.1",
     "driver-dom": "^2.0.0",
     "global": "^4.3.2",
+    "react": "^16.8.3 || ^17.0.0",
+    "react-dom": "^16.13.1 || ^17.0.0",
     "regenerator-runtime": "^0.13.3",
     "ts-dedent": "^1.1.1"
   },
@@ -47,9 +49,7 @@
   },
   "peerDependencies": {
     "@babel/core": "*",
-    "rax": "^0.4.0 || ^1.0.0",
-    "react": "*",
-    "react-dom": "*"
+    "rax": "^0.4.0 || ^1.0.0"
   },
   "publishConfig": {
     "access": "public"
