--- a/app/server/package.json
+++ b/app/server/package.json
@@ -41,6 +41,8 @@
     "@types/webpack-env": "^1.15.2",
     "core-js": "^3.0.1",
     "global": "^4.3.2",
+    "react": "^16.8.3 || ^17.0.0",
+    "react-dom": "^16.13.1 || ^17.0.0",
     "regenerator-runtime": "^0.13.3",
     "safe-identifier": "^0.4.1",
     "ts-dedent": "^1.1.1"
