--- a/addons/graphql/package.json
+++ b/addons/graphql/package.json
@@ -33,6 +33,7 @@
     "@babel/plugin-transform-classes": "^7.9.2",
     "@storybook/addons": "6.0.0-beta.31",
     "@storybook/api": "6.0.0-beta.31",
+    "@types/webpack-env": "^1.15.2",
     "babel-loader": "^8.0.6",
     "core-js": "^3.0.1",
     "global": "^4.3.2",
@@ -40,8 +41,7 @@
     "graphql": "^15.0.0",
     "prop-types": "^15.7.2",
     "regenerator-runtime": "^0.13.3",
-    "@types/webpack-env": "^1.15.2",
-    "webpack": "5.0.0-beta.17"
+    "webpack": "^5.3.2"
   },
   "peerDependencies": {
     "react": "*",
