--- a/app/angular/package.json
+++ b/app/angular/package.json
@@ -50,7 +50,7 @@
     "strip-json-comments": "^3.0.1",
     "ts-loader": "^6.0.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "webpack": "5.0.0-beta.17"
+    "webpack": "5.3.2"
   },
   "devDependencies": {
     "@types/autoprefixer": "^9.4.0"
