--- a/app/aurelia/package.json
+++ b/app/aurelia/package.json
@@ -33,7 +33,7 @@
     "fork-ts-checker-webpack-plugin": "^5.0.1",
     "global": "^4.3.2",
     "ts-loader": "^6.0.1",
-    "webpack": "5.0.0-beta.17"
+    "webpack": "5.3.2"
   },
   "devDependencies": {
     "@types/node": "^14.0.10",
@@ -47,7 +47,7 @@
     "sass-loader": "^8.0.0",
     "style-loader": "^0.23.0",
     "typescript": "latest",
-    "webpack": "5.0.0-beta.17"
+    "webpack": "5.3.2"
   },
   "peerDependencies": {
     "aurelia": "dev"
