--- a/app/ember/package.json
+++ b/app/ember/package.json
@@ -37,7 +37,7 @@
     "global": "^4.3.2",
     "regenerator-runtime": "^0.13.3",
     "ts-dedent": "^1.1.1",
-    "webpack": "5.0.0-beta.17"
+    "webpack": "5.3.2"
   },
   "peerDependencies": {
     "@babel/core": "*",
