--- a/app/html/package.json
+++ b/app/html/package.json
@@ -42,7 +42,7 @@
     "html-loader": "^1.0.0",
     "regenerator-runtime": "^0.13.3",
     "ts-dedent": "^1.1.1",
-    "webpack": "5.0.0-beta.17"
+    "webpack": "5.3.2"
   },
   "peerDependencies": {
     "@babel/core": "*",
