--- a/app/marionette/package.json
+++ b/app/marionette/package.json
@@ -31,7 +31,7 @@
     "global": "^4.3.2",
     "html-loader": "^1.0.0",
     "regenerator-runtime": "^0.13.3",
-    "webpack": "5.0.0-beta.17"
+    "webpack": "5.3.2"
   },
   "devDependencies": {
     "backbone.marionette": "*"
