--- a/app/react/package.json
+++ b/app/react/package.json
@@ -53,7 +53,7 @@
     "react-docgen-typescript-plugin": "^0.5.0",
     "regenerator-runtime": "^0.13.3",
     "ts-dedent": "^1.1.1",
-    "webpack": "5.0.0-beta.17"
+    "webpack": "5.3.2"
   },
   "devDependencies": {
     "@storybook/client-api": "6.0.0-beta.31",
