--- a/app/riot/package.json
+++ b/app/riot/package.json
@@ -40,7 +40,7 @@
     "raw-loader": "^4.0.1",
     "regenerator-runtime": "^0.13.3",
     "ts-dedent": "^1.1.1",
-    "webpack": "5.0.0-beta.17"
+    "webpack": "^5.3.2"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.9.6",
