--- a/app/vue/package.json
+++ b/app/vue/package.json
@@ -42,7 +42,7 @@
     "regenerator-runtime": "^0.13.3",
     "ts-dedent": "^1.1.1",
     "ts-loader": "^6.2.2",
-    "webpack": "5.0.0-beta.17"
+    "webpack": "5.3.2"
   },
   "devDependencies": {
     "@types/node": "^14.0.10",
