--- a/examples/ember-cli/package.json
+++ b/examples/ember-cli/package.json
@@ -45,7 +45,7 @@
     "ember-resolver": "^7.0.0",
     "ember-source": "~3.19.0",
     "loader.js": "^4.2.3",
-    "webpack": "5.0.0-beta.17",
+    "webpack": "5.3.2",
     "webpack-cli": "^3.3.0"
   },
   "engines": {
