--- a/examples/marko-cli/package.json
+++ b/examples/marko-cli/package.json
@@ -31,7 +31,7 @@
     "@storybook/marko": "6.0.0-beta.31",
     "@storybook/source-loader": "6.0.0-beta.31",
     "prettier": "^2.0.5",
-    "webpack": "5.0.0-beta.17"
+    "webpack": "5.3.2"
   },
   "storybook": {
     "chromatic": {
