--- a/examples/mithril-kitchen-sink/package.json
+++ b/examples/mithril-kitchen-sink/package.json
@@ -21,7 +21,7 @@
     "@storybook/addons": "6.0.0-beta.31",
     "@storybook/mithril": "6.0.0-beta.31",
     "@storybook/source-loader": "6.0.0-beta.31",
-    "webpack": "5.0.0-beta.17"
+    "webpack": "5.3.2"
   },
   "storybook": {
     "chromatic": {
