--- a/examples/official-storybook/package.json
+++ b/examples/official-storybook/package.json
@@ -59,7 +59,7 @@
     "terser-webpack-plugin": "^3.0.0",
     "ts-loader": "^6.0.0",
     "uuid": "^8.0.0",
-    "webpack": "5.0.0-beta.17"
+    "webpack": "5.3.2"
   },
   "peerDependencies": {
     "puppeteer": "^2.0.0 || ^3.0.0"
