--- a/examples/react-ts/package.json
+++ b/examples/react-ts/package.json
@@ -17,6 +17,6 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "typescript": "^3.9.2",
-    "webpack": "5.0.0-beta.17"
+    "webpack": "5.3.2"
   }
 }
