--- a/examples/riot-kitchen-sink/package.json
+++ b/examples/riot-kitchen-sink/package.json
@@ -32,7 +32,7 @@
     "raw-loader": "^4.0.1",
     "riot-tag-loader": "^2.1.0",
     "svg-url-loader": "^5.0.0",
-    "webpack": "5.0.0-beta.17",
+    "webpack": "5.3.2",
     "webpack-dev-server": "^3.11.0"
   },
   "storybook": {
