--- a/lib/core/package.json
+++ b/lib/core/package.json
@@ -122,7 +122,7 @@
     "unfetch": "^4.1.0",
     "url-loader": "^4.0.0",
     "util-deprecate": "^1.0.2",
-    "webpack": "5.0.0-beta.17",
+    "webpack": "5.3.2",
     "webpack-dev-middleware": "^3.7.0",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-virtual-modules": "^0.2.2"
