--- a/lib/ui/package.json
+++ b/lib/ui/package.json
@@ -72,7 +72,7 @@
     "enzyme": "^3.11.0",
     "flush-promises": "^1.0.2",
     "terser-webpack-plugin": "^3.0.0",
-    "webpack": "5.0.0-beta.17"
+    "webpack": "5.3.2"
   },
   "publishConfig": {
     "access": "public"
