--- a/package.json
+++ b/package.json
@@ -242,7 +242,7 @@
     "ts-node": "^8.9.1",
     "typescript": "^3.4.0",
     "wait-on": "^4.0.0",
-    "webpack": "5.0.0-beta.17",
+    "webpack": "^5.3.2",
     "window-size": "^1.1.1"
   },
   "optionalDependencies": {
