--- a/app/web-components/package.json
+++ b/app/web-components/package.json
@@ -36,15 +36,15 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-syntax-import-meta": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-syntax-import-meta": "^7.10.4",
     "@storybook/addons": "6.0.0-beta.31",
     "@storybook/core": "6.0.0-beta.31",
-    "@types/webpack-env": "^1.15.2",
-    "babel-plugin-bundled-import-meta": "^0.3.1",
-    "core-js": "^3.0.1",
-    "global": "^4.3.2",
-    "regenerator-runtime": "^0.13.3",
+    "@types/webpack-env": "^1.15.3",
+    "babel-plugin-bundled-import-meta": "^0.3.2",
+    "core-js": "^3.6.5",
+    "global": "^4.4.0",
+    "regenerator-runtime": "^0.13.7",
     "ts-dedent": "^1.1.1",
     "webpack": "5.3.2"
   },
@@ -53,7 +53,7 @@
   },
   "peerDependencies": {
     "@babel/core": "*",
-    "babel-loader": "^7.0.0 || ^8.0.0",
+    "babel-loader": "^8.1.0",
     "lit-html": "^1.0.0",
     "react": "*",
     "react-dom": "*"
