--- a/app/web-components/package.json
+++ b/app/web-components/package.json
@@ -53,7 +53,7 @@
   },
   "peerDependencies": {
     "@babel/core": "*",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^7.0.0 || ^8.0.0",
     "lit-html": "^1.0.0",
     "react": "*",
     "react-dom": "*"
