--- a/lib/channel-postmessage/package.json
+++ b/lib/channel-postmessage/package.json
@@ -28,11 +28,11 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@storybook/channels": "6.0.0-beta.31",
+    "@storybook/channels": "6.0.28",
     "@storybook/client-logger": "6.0.0-beta.31",
     "@storybook/core-events": "6.0.0-beta.31",
-    "core-js": "^3.0.1",
-    "global": "^4.3.2",
+    "core-js": "^3.6.5",
+    "global": "^4.4.0",
     "telejson": "^4.0.0"
   },
   "publishConfig": {
