--- a/lib/cli/package.json
+++ b/lib/cli/package.json
@@ -38,28 +38,28 @@
     "test-yarn-2": "cd test && ./run_tests_yarn_2.sh"
   },
   "dependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "@storybook/codemod": "6.0.0-beta.31",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@storybook/codemod": "6.0.28",
     "@storybook/node-logger": "6.0.0-beta.31",
     "@storybook/semver": "^7.3.2",
-    "chalk": "^4.0.0",
+    "chalk": "^4.1.0",
     "commander": "^5.0.0",
-    "core-js": "^3.0.1",
-    "cross-spawn": "^7.0.0",
-    "envinfo": "^7.5.1",
+    "core-js": "^3.6.5",
+    "cross-spawn": "^7.0.3",
+    "envinfo": "^7.7.3",
     "express": "^4.17.1",
     "find-up": "^4.1.0",
-    "fs-extra": "^9.0.0",
+    "fs-extra": "^9.0.1",
     "get-port": "^5.1.1",
-    "globby": "^11.0.0",
+    "globby": "^11.0.1",
     "inquirer": "^7.0.0",
     "jscodeshift": "^0.6.3",
-    "json5": "^2.1.1",
+    "json5": "^2.1.3",
     "leven": "^3.1.0",
     "puppeteer-core": "^2.0.0",
-    "shelljs": "^0.8.3",
-    "strip-json-comments": "^3.0.1",
+    "shelljs": "^0.8.4",
+    "strip-json-comments": "^3.1.1",
     "update-notifier": "^4.0.0"
   },
   "devDependencies": {
@@ -87,11 +87,11 @@
     "@storybook/ui": "6.0.0-beta.31",
     "@storybook/vue": "6.0.0-beta.31",
     "@storybook/web-components": "6.0.0-beta.31",
-    "@types/cross-spawn": "^6.0.1",
+    "@types/cross-spawn": "^6.0.2",
     "@types/inquirer": "^6.5.0",
     "@types/puppeteer-core": "^2.0.0",
     "@types/semver": "^7.2.0",
-    "@types/shelljs": "^0.8.7",
+    "@types/shelljs": "^0.8.8",
     "@types/update-notifier": "^0.0.30"
   },
   "peerDependencies": {
