--- a/app/aurelia/package.json
+++ b/app/aurelia/package.json
@@ -40,7 +40,7 @@
     "@types/webpack-env": "^1.15.1",
     "css-loader": "^5.0.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^4.5.0",
+    "html-webpack-plugin": "^5.0.0-alpha.9",
     "htmlhint": "^0.11.0",
     "node-sass": "^4.12.0",
     "rimraf": "^3.0.2",
