--- a/examples/aurelia-kitchen-sink/package.json
+++ b/examples/aurelia-kitchen-sink/package.json
@@ -37,7 +37,7 @@
     "@types/node": "^14.0.10",
     "css-loader": "^5.0.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^4.5.0",
+    "html-webpack-plugin": "^5.0.0-alpha.9",
     "htmlhint": "^0.11.0",
     "node-sass": "^5.0.0",
     "rimraf": "^3.0.2",
