--- a/lib/core/package.json
+++ b/lib/core/package.json
@@ -95,7 +95,7 @@
     "glob-base": "^0.3.0",
     "glob-promise": "^3.4.0",
     "global": "^4.3.2",
-    "html-webpack-plugin": "^4.3.0",
+    "html-webpack-plugin": "^5.0.0-alpha.9",
     "inquirer": "^7.0.0",
     "interpret": "^2.0.0",
     "ip": "^1.1.5",
