--- a/addons/graphql/package.json
+++ b/addons/graphql/package.json
@@ -43,7 +43,7 @@
     "react": "^16.8.3 || ^17.0.0",
     "react-dom": "^16.8.3 || ^17.0.0",
     "regenerator-runtime": "^0.13.7",
-    "webpack": "^4.43.0"
+    "webpack": "5.3.2"
   },
   "publishConfig": {
     "access": "public"
