--- a/app/angular/package.json
+++ b/app/angular/package.json
@@ -40,16 +40,16 @@
     "@types/webpack-env": "^1.15.2",
     "autoprefixer": "^9.7.6",
     "core-js": "^3.6.5",
-    "fork-ts-checker-webpack-plugin": "^4.0.3",
+    "fork-ts-checker-webpack-plugin": "^5.2.1",
     "global": "^4.4.0",
     "postcss-loader": "^3.0.0",
     "raw-loader": "^4.0.2",
     "regenerator-runtime": "^0.13.7",
     "sass-loader": "^8.0.0",
     "strip-json-comments": "^3.0.1",
-    "ts-loader": "^6.0.1",
+    "ts-loader": "^8.0.7",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "webpack": "^4.43.0"
+    "webpack": "5.3.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.0",
