--- a/app/aurelia/package.json
+++ b/app/aurelia/package.json
@@ -31,26 +31,26 @@
     "@storybook/addons": "6.1.0-alpha.35",
     "@storybook/core": "6.1.0-alpha.35",
     "@storybook/node-logger": "6.1.0-alpha.35",
-    "fork-ts-checker-webpack-plugin": "^4.0.3",
+    "fork-ts-checker-webpack-plugin": "^5.2.1",
     "global": "^4.4.0",
-    "ts-loader": "^6.0.1",
-    "url-loader": "^4.1.0",
-    "webpack": "^4.33.0"
+    "ts-loader": "^8.0.7",
+    "url-loader": "^4.1.1",
+    "webpack": "5.3.2"
   },
   "devDependencies": {
     "@types/node": "^14.0.10",
     "@types/webpack-env": "^1.15.1",
     "aurelia": "^0.7.0",
-    "css-loader": "^3.0.0",
-    "file-loader": "^4.2.0",
+    "css-loader": "^5.0.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^3.0.0",
     "htmlhint": "^0.11.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^5.0.0",
     "rimraf": "^3.0.2",
     "sass-loader": "^8.0.0",
-    "style-loader": "^0.23.0",
+    "style-loader": "^2.0.0",
     "typescript": "^3.9.3",
-    "webpack": "^4.33.0"
+    "webpack": "5.3.2"
   },
   "peerDependencies": {
     "aurelia": "*"
