--- a/app/marko/package.json
+++ b/app/marko/package.json
@@ -44,7 +44,7 @@
   "peerDependencies": {
     "@babel/core": "*",
     "marko": "^4.15.2 || ^5.0.0-next || ^5",
-    "webpack": "^4"
+    "webpack": "5.3.2"
   },
   "engines": {
     "node": ">=8.0.0"
