--- a/app/react/package.json
+++ b/app/react/package.json
@@ -57,7 +57,7 @@
     "react-refresh": "^0.8.3",
     "regenerator-runtime": "^0.13.7",
     "ts-dedent": "^2.0.0",
-    "webpack": "^4.43.0"
+    "webpack": "5.3.2"
   },
   "devDependencies": {
     "@storybook/client-api": "6.1.0-alpha.35",
