--- a/app/vue/package.json
+++ b/app/vue/package.json
@@ -41,10 +41,10 @@
     "global": "^4.4.0",
     "regenerator-runtime": "^0.13.7",
     "ts-dedent": "^2.0.0",
-    "ts-loader": "^6.2.2",
+    "ts-loader": "^8.0.7",
     "vue-docgen-api": "^4.33.1",
     "vue-docgen-loader": "^1.5.0",
-    "webpack": "^4.43.0"
+    "webpack": "5.3.2"
   },
   "devDependencies": {
     "@types/node": "^14.0.10",
@@ -55,9 +55,9 @@
   },
   "peerDependencies": {
     "@babel/core": "*",
-    "babel-loader": "^7.0.0 || ^8.0.0",
+    "babel-loader": "^8.1.0",
     "css-loader": "*",
-    "ts-loader": "^6.2.2",
+    "ts-loader": "^8.0.7",
     "vue": "^2.6.8",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.8"
