--- a/app/web-components/package.json
+++ b/app/web-components/package.json
@@ -54,7 +54,7 @@
   },
   "peerDependencies": {
     "@babel/core": "*",
-    "babel-loader": "^7.0.0 || ^8.0.0",
+    "babel-loader": "^8.1.0",
     "lit-html": "^1.0.0"
   },
   "engines": {
