--- a/examples/aurelia-kitchen-sink/package.json
+++ b/examples/aurelia-kitchen-sink/package.json
@@ -36,15 +36,15 @@
     "@storybook/source-loader": "6.1.0-alpha.35",
     "@types/node": "^14.0.10",
     "css-loader": "^3.0.0",
-    "file-loader": "^4.2.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^3.0.0",
     "htmlhint": "^0.11.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^5.0.0",
     "rimraf": "^3.0.2",
     "sass-loader": "^8.0.0",
-    "style-loader": "^0.23.0",
-    "ts-loader": "^6.0.0",
+    "style-loader": "^2.0.0",
+    "ts-loader": "^8.0.7",
     "typescript": "^3.9.3",
-    "webpack": "^4.41.2"
+    "webpack": "5.3.2"
   }
 }
