--- a/examples/marko-cli/package.json
+++ b/examples/marko-cli/package.json
@@ -31,7 +31,7 @@
     "@storybook/marko": "6.1.0-alpha.35",
     "@storybook/source-loader": "6.1.0-alpha.35",
     "prettier": "~2.0.5",
-    "webpack": "^4.33.0"
+    "webpack": "5.3.2"
   },
   "storybook": {
     "chromatic": {
