--- a/examples/official-storybook/package.json
+++ b/examples/official-storybook/package.json
@@ -58,9 +58,9 @@
     "react": "^16.8.3 || ^17.0.0",
     "react-dom": "^16.8.3 || ^17.0.0",
     "terser-webpack-plugin": "^3.0.0",
-    "ts-loader": "^6.0.0",
+    "ts-loader": "^8.0.7",
     "uuid": "^8.0.0",
-    "webpack": "^4.33.0"
+    "webpack": "5.3.2"
   },
   "peerDependencies": {
     "puppeteer": "^2.0.0 || ^3.0.0"
