--- a/examples/react-ts/package.json
+++ b/examples/react-ts/package.json
@@ -17,6 +17,6 @@
     "react": "^16.8.3 || ^17.0.0",
     "react-dom": "^16.8.3 || ^17.0.0",
     "typescript": "^3.9.3",
-    "webpack": "^4.43.0"
+    "webpack": "5.3.2"
   }
 }
