--- a/examples/riot-kitchen-sink/package.json
+++ b/examples/riot-kitchen-sink/package.json
@@ -26,13 +26,13 @@
     "@storybook/addons": "6.1.0-alpha.35",
     "@storybook/riot": "6.1.0-alpha.35",
     "@storybook/source-loader": "6.1.0-alpha.35",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.1.0",
     "cross-env": "^7.0.0",
-    "file-loader": "^6.0.0",
+    "file-loader": "^6.2.0",
     "raw-loader": "^4.0.2",
     "riot-tag-loader": "^2.1.0",
-    "svg-url-loader": "^5.0.0",
-    "webpack": "^4.33.0",
+    "svg-url-loader": "^6.0.0",
+    "webpack": "5.3.2",
     "webpack-dev-server": "^3.8.2"
   },
   "storybook": {
