--- a/examples/vue-kitchen-sink/package.json
+++ b/examples/vue-kitchen-sink/package.json
@@ -30,12 +30,12 @@
     "@vue/babel-preset-jsx": "^1.1.2",
     "babel-loader": "^8.1.0",
     "cross-env": "^7.0.0",
-    "file-loader": "^6.0.0",
+    "file-loader": "^6.2.0",
     "prop-types": "^15.7.2",
-    "svg-url-loader": "^5.0.0",
-    "vue-loader": "^15.7.0",
+    "svg-url-loader": "^6.0.0",
+    "vue-loader": "^15.9.4",
     "vue-style-loader": "^4.1.2",
-    "webpack": "^4.33.0",
+    "webpack": "5.3.2",
     "webpack-dev-server": "^3.8.2"
   },
   "storybook": {
