--- a/lib/core/package.json
+++ b/lib/core/package.json
@@ -84,21 +84,21 @@
     "commander": "^5.0.0",
     "core-js": "^3.6.5",
     "cpy": "^8.1.1",
-    "css-loader": "^3.5.3",
+    "css-loader": "^5.0.0",
     "detect-port": "^1.3.0",
     "dotenv-webpack": "^1.7.0",
     "ejs": "^3.1.2",
     "express": "^4.17.0",
-    "file-loader": "^6.0.0",
+    "file-loader": "^6.2.0",
     "file-system-cache": "^1.0.5",
     "find-up": "^4.1.0",
-    "fork-ts-checker-webpack-plugin": "^4.1.4",
+    "fork-ts-checker-webpack-plugin": "^5.2.1",
     "fs-extra": "^9.0.0",
     "glob": "^7.1.6",
     "glob-base": "^0.3.0",
     "glob-promise": "^3.4.0",
     "global": "^4.4.0",
-    "html-webpack-plugin": "^4.2.1",
+    "html-webpack-plugin": "^5.0.0-alpha.9",
     "inquirer": "^7.0.0",
     "interpret": "^2.0.0",
     "ip": "^1.1.5",
@@ -127,13 +127,13 @@
     "trash": "^6.1.1",
     "ts-dedent": "^2.0.0",
     "unfetch": "^4.1.0",
-    "url-loader": "^4.0.0",
+    "url-loader": "^4.1.1",
     "util-deprecate": "^1.0.2",
-    "webpack": "^4.43.0",
+    "webpack": "5.3.2",
     "webpack-dev-middleware": "^3.7.0",
     "webpack-filter-warnings-plugin": "^1.2.1",
     "webpack-hot-middleware": "^2.25.0",
-    "webpack-virtual-modules": "^0.2.2"
+    "webpack-virtual-modules": "^0.3.2"
   },
   "devDependencies": {
     "mock-fs": "^4.12.0"
