--- a/lib/ui/package.json
+++ b/lib/ui/package.json
@@ -71,7 +71,7 @@
     "enzyme": "^3.11.0",
     "flush-promises": "^1.0.2",
     "terser-webpack-plugin": "^3.0.0",
-    "webpack": "^4.33.0"
+    "webpack": "5.3.2"
   },
   "publishConfig": {
     "access": "public"
