--- a/app/ember/package.json
+++ b/app/ember/package.json
@@ -39,7 +39,7 @@
     "ts-dedent": "^2.0.0"
   },
   "peerDependencies": {
-    "@babel/core": "*",
+    "@babel/core": "^7.12.3",
     "babel-plugin-ember-modules-api-polyfill": "^2.12.0",
     "babel-plugin-htmlbars-inline-precompile": "2 || 3",
     "ember-source": "^3.16.0"
