--- a/examples/aurelia-kitchen-sink/package.json
+++ b/examples/aurelia-kitchen-sink/package.json
@@ -45,6 +45,6 @@
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.7",
     "typescript": "^3.9.3",
-    "webpack": "5.3.2"
+    "webpack": "^5.3.2"
   }
 }
