--- a/addons/docs/package.json
+++ b/addons/docs/package.json
@@ -38,7 +38,7 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@babel/core": "^7.12.1",
+    "@babel/core": "^7.12.3",
     "@babel/generator": "^7.12.1",
     "@babel/parser": "^7.12.3",
     "@babel/plugin-transform-react-jsx": "^7.12.1",
@@ -112,16 +112,16 @@
     "tmp": "^0.2.1",
     "tslib": "^2.0.0",
     "web-component-analyzer": "^1.0.3",
-    "webpack": "5.3.2",
+    "webpack": "^5.3.2",
     "zone.js": "^0.10.2"
   },
   "peerDependencies": {
-    "@babel/core": "^7.11.5",
+    "@babel/core": "^7.12.3",
     "@storybook/vue": "6.1.0-alpha.35",
     "babel-loader": "^8.1.0",
     "sveltedoc-parser": "^3.0.4",
     "vue": "^2.6.10",
-    "webpack": ">=4"
+    "webpack": "*"
   },
   "peerDependenciesMeta": {
     "@storybook/vue": {
