--- a/addons/graphql/package.json
+++ b/addons/graphql/package.json
@@ -33,7 +33,6 @@
     "@babel/plugin-transform-classes": "^7.12.1",
     "@storybook/addons": "6.1.0-alpha.35",
     "@storybook/api": "6.1.0-alpha.35",
-    "@types/webpack": "^4.41.9",
     "babel-loader": "^8.1.0",
     "core-js": "^3.6.5",
     "global": "^4.4.0",
@@ -43,7 +42,7 @@
     "react": "^16.8.3 || ^17.0.0",
     "react-dom": "^16.8.3 || ^17.0.0",
     "regenerator-runtime": "^0.13.7",
-    "webpack": "5.3.2"
+    "webpack": "^5.3.2"
   },
   "publishConfig": {
     "access": "public"
