--- a/app/angular/package.json
+++ b/app/angular/package.json
@@ -49,7 +49,7 @@
     "strip-json-comments": "^3.0.1",
     "ts-loader": "^8.0.7",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "webpack": "5.3.2"
+    "webpack": "^5.3.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.0",
@@ -71,7 +71,7 @@
     "@angular/forms": ">=6.0.0",
     "@angular/platform-browser": ">=6.0.0",
     "@angular/platform-browser-dynamic": ">=6.0.0",
-    "@babel/core": "*",
+    "@babel/core": "^7.12.3",
     "rxjs": "^6.0.0",
     "typescript": "^3.4.0 || >=4.0.0",
     "zone.js": "^0.8.29 || ^0.9.0 || ^0.10.0"
