--- a/app/aurelia/package.json
+++ b/app/aurelia/package.json
@@ -35,7 +35,7 @@
     "global": "^4.4.0",
     "ts-loader": "^8.0.7",
     "url-loader": "^4.1.1",
-    "webpack": "5.3.2"
+    "webpack": "^5.3.2"
   },
   "devDependencies": {
     "@types/node": "^14.0.10",
@@ -50,7 +50,7 @@
     "sass-loader": "^8.0.0",
     "style-loader": "^2.0.0",
     "typescript": "^3.9.3",
-    "webpack": "5.3.2"
+    "webpack": "^5.3.2"
   },
   "peerDependencies": {
     "aurelia": "*"
