--- a/app/html/package.json
+++ b/app/html/package.json
@@ -40,12 +40,13 @@
     "@types/webpack-env": "^1.15.2",
     "core-js": "^3.6.5",
     "global": "^4.4.0",
-    "html-loader": "^1.0.0",
+    "html-loader": "^1.3.2",
     "regenerator-runtime": "^0.13.7",
-    "ts-dedent": "^2.0.0"
+    "ts-dedent": "^2.0.0",
+    "webpack": "^5.3.2"
   },
   "peerDependencies": {
-    "@babel/core": "*"
+    "@babel/core": "^7.12.3"
   },
   "engines": {
     "node": ">=8.0.0"
