--- a/app/html/tsconfig.json
+++ b/app/html/tsconfig.json
@@ -2,8 +2,13 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "rootDir": "./src",
-    "types": ["webpack-env", "node"]
+    "types": ["webpack-env", "node"],
+    "resolveJsonModule": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["src/__tests__/**/*"]
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "src/**/*.test.*"
+  ]
 }
