--- a/app/marko/package.json
+++ b/app/marko/package.json
@@ -42,9 +42,9 @@
     "ts-dedent": "^2.0.0"
   },
   "peerDependencies": {
-    "@babel/core": "*",
+    "@babel/core": "^7.12.3",
     "marko": "^4.15.2 || ^5.0.0-next || ^5",
-    "webpack": "5.3.2"
+    "webpack": "^5.3.2"
   },
   "engines": {
     "node": ">=8.0.0"
