--- a/app/preact/package.json
+++ b/app/preact/package.json
@@ -47,7 +47,7 @@
     "preact": "^10.4.0"
   },
   "peerDependencies": {
-    "@babel/core": "*",
+    "@babel/core": "^7.12.3",
     "preact": "^8.0.0||^10.0.0"
   },
   "engines": {
