--- a/app/react/package.json
+++ b/app/react/package.json
@@ -57,15 +57,14 @@
     "react-refresh": "^0.8.3",
     "regenerator-runtime": "^0.13.7",
     "ts-dedent": "^2.0.0",
-    "webpack": "5.3.2"
+    "webpack": "^5.3.2"
   },
   "devDependencies": {
     "@storybook/client-api": "6.1.0-alpha.35",
-    "@types/node": "^14.0.10",
-    "@types/webpack": "^4.41.12"
+    "@types/node": "^14.0.10"
   },
   "peerDependencies": {
-    "@babel/core": "^7.11.5"
+    "@babel/core": "^7.12.3"
   },
   "engines": {
     "node": ">=8.0.0"
