--- a/app/riot/package.json
+++ b/app/riot/package.json
@@ -48,12 +48,12 @@
     "@babel/preset-react": "^7.12.1"
   },
   "peerDependencies": {
-    "@babel/core": "*",
+    "@babel/core": "^7.12.3",
     "riot": "^3.0.0 || ^4.0.0",
     "riot-compiler": "^3.5.1 || ^4.0.0",
     "riot-hot-reload": "^1.0.0",
     "riot-tag-loader": "^2.0.0 || ^3.0.0",
-    "webpack": "5.3.2"
+    "webpack": "^5.3.2"
   },
   "engines": {
     "node": ">=8.0.0"
