--- a/app/svelte/package.json
+++ b/app/svelte/package.json
@@ -48,7 +48,7 @@
     "svelte-loader": "^2.13.4"
   },
   "peerDependencies": {
-    "@babel/core": "*",
+    "@babel/core": "^7.12.3",
     "svelte": "^3.1.0",
     "svelte-loader": "^2.9.1"
   },
