--- a/app/vue/package.json
+++ b/app/vue/package.json
@@ -44,17 +44,16 @@
     "ts-loader": "^8.0.7",
     "vue-docgen-api": "^4.33.1",
     "vue-docgen-loader": "^1.5.0",
-    "webpack": "5.3.2"
+    "webpack": "^5.3.2"
   },
   "devDependencies": {
     "@types/node": "^14.0.10",
-    "@types/webpack": "^4.41.12",
     "vue": "^2.6.8",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.8"
   },
   "peerDependencies": {
-    "@babel/core": "*",
+    "@babel/core": "^7.12.3",
     "babel-loader": "^8.1.0",
     "css-loader": "*",
     "ts-loader": "^8.0.7",
