--- a/examples/mithril-kitchen-sink/package.json
+++ b/examples/mithril-kitchen-sink/package.json
@@ -21,7 +21,7 @@
     "@storybook/addons": "6.1.0-alpha.35",
     "@storybook/mithril": "6.1.0-alpha.35",
     "@storybook/source-loader": "6.1.0-alpha.35",
-    "webpack": "5.3.2"
+    "webpack": "^5.3.2"
   },
   "storybook": {
     "chromatic": {
