--- a/examples/vue-kitchen-sink/package.json
+++ b/examples/vue-kitchen-sink/package.json
@@ -35,7 +35,7 @@
     "svg-url-loader": "^6.0.0",
     "vue-loader": "^15.9.4",
     "vue-style-loader": "^4.1.2",
-    "webpack": "5.3.2",
+    "webpack": "^5.3.2",
     "webpack-dev-server": "^3.8.2"
   },
   "storybook": {
