--- a/lib/core/package.json
+++ b/lib/core/package.json
@@ -129,7 +129,7 @@
     "unfetch": "^4.1.0",
     "url-loader": "^4.1.1",
     "util-deprecate": "^1.0.2",
-    "webpack": "5.3.2",
+    "webpack": "^5.3.2",
     "webpack-dev-middleware": "^3.7.0",
     "webpack-filter-warnings-plugin": "^1.2.1",
     "webpack-hot-middleware": "^2.25.0",
