--- a/app/ember/tsconfig.json
+++ b/app/ember/tsconfig.json
@@ -1,10 +1,14 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "rootDir": ".",
+    "rootDir": "./src",
     "types": ["webpack-env"],
     "resolveJsonModule": true
   },
-  "include": ["src/**/*", "package.json"],
-  "exclude": ["src/**/*.test.*"]
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "src/**/*.test.*"
+  ]
 }
