--- a/package.json
+++ b/package.json
@@ -107,6 +107,8 @@
     "@babel/preset-react": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
     "@babel/runtime": "^7.12.1",
+    "@emotion/babel-plugin": "^11.0.0",
+    "@emotion/jest": "11.0.0",
     "@emotion/snapshot-serializer": "^0.8.2",
     "@nicolo-ribaudo/chokidar-2": "^2.1.8",
     "@storybook/eslint-config-storybook": "^2.4.0",
@@ -138,7 +140,6 @@
     "babel-loader": "^8.0.5",
     "babel-plugin-add-react-displayname": "^0.0.5",
     "babel-plugin-dynamic-import-node": "^2.3.3",
-    "babel-plugin-emotion": "^10.0.20",
     "babel-plugin-macros": "^2.7.0",
     "babel-plugin-require-context-hook": "^1.0.0",
     "chalk": "^4.0.0",
@@ -167,7 +168,6 @@
     "husky": "^4.0.10",
     "inquirer": "^7.0.0",
     "jest": "^26.0.0",
-    "jest-emotion": "^10.0.17",
     "jest-environment-jsdom": "^26.0.0",
     "jest-environment-jsdom-thirteen": "^1.0.1",
     "jest-enzyme": "^7.0.2",
