--- a/addons/storyshots/storyshots-core/package.json
+++ b/addons/storyshots/storyshots-core/package.json
@@ -18,13 +18,6 @@
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "typesVersions": {
-    "<3.8": {
-      "*": [
-        "ts3.4/*"
-      ]
-    }
-  },
   "files": [
     "dist/**/*",
     "README.md",
@@ -58,12 +51,12 @@
     "ts-dedent": "^2.0.0"
   },
   "devDependencies": {
+    "@emotion/jest": "11.0.0",
     "@storybook/addon-docs": "6.1.6",
     "@storybook/react": "6.1.6",
     "babel-loader": "^8.0.6",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.4.1",
-    "jest-emotion": "^10.0.17",
     "jest-preset-angular": "^8.3.2",
     "jest-vue-preprocessor": "^1.5.0"
   },
@@ -98,5 +91,12 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "1f89b5b967974abd3badb3b63d88303dfee4467b"
+  "gitHead": "1f89b5b967974abd3badb3b63d88303dfee4467b",
+  "typesVersions": {
+    "<3.8": {
+      "*": [
+        "ts3.4/*"
+      ]
+    }
+  }
 }
