--- a/lib/ui/package.json
+++ b/lib/ui/package.json
@@ -16,13 +16,6 @@
   },
   "license": "MIT",
   "main": "dist/index.js",
-  "typesVersions": {
-    "<3.8": {
-      "*": [
-        "ts3.4/*"
-      ]
-    }
-  },
   "files": [
     "dist/**/*",
     "README.md",
@@ -34,7 +27,7 @@
     "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@emotion/core": "^10.1.1",
+    "@emotion/react": "^11.0.0",
     "@storybook/addons": "6.1.6",
     "@storybook/api": "6.1.6",
     "@storybook/channels": "6.1.6",
@@ -49,7 +42,6 @@
     "core-js": "^3.0.1",
     "core-js-pure": "^3.0.1",
     "downshift": "^6.0.6",
-    "emotion-theming": "^10.0.19",
     "fuse.js": "^3.6.1",
     "global": "^4.3.2",
     "lodash": "^4.17.15",
@@ -85,5 +77,12 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "1f89b5b967974abd3badb3b63d88303dfee4467b"
+  "gitHead": "1f89b5b967974abd3badb3b63d88303dfee4467b",
+  "typesVersions": {
+    "<3.8": {
+      "*": [
+        "ts3.4/*"
+      ]
+    }
+  }
 }
